		and IRNativeAMD64 for later.
		The IRBlockCache can now be resized during runtime (and it
		expands automatically if necessary).
20080314	Working on the main loop, GXemul::ExecuteCycles(), which should
		call each component's Run function in suitable proportions.
		Adding a CPUComponent base class, from which MIPS_CPUComponent
		inherits.
20080316	Switching from CVS to SVN.
		Adding a test to the configure script for the "-ansi" compiler
		option; implementing a simple parse_number to replace strtoull
		to make everything build with -ansi. Various minor fixes to
		make -ansi work on a Debian GNU/Linux system (using CXXFLAGS
		instead of CFLAGS in Makefiles, and probe MAP_ANON in the
		configure script using $CXX, not $CC).
		Moving NativeTranslationExists and LookupCurrentCodePage from
		MIPS_CPUComponent to CPUComponent; these are intended to be
		used from most CPU components.
		Removing lots of "cd .." stuff from the Makefiles; GNU make
		did not work too well with them. Hopefully this will make
		tracking down compile problems on GNU/Linux machines easier.
20080317	Beginning on an AddressDataBus abstract class/interface, which
		e.g. the RAM component will implement.
20080320	Continuing on the RAMComponent class.
20080321	"make install" now installs .desktop and icon files.
		More work on the RAMComponent class: endianness for loads and
		stores larger than 8 bits, some simple unit tests.
20080322	Adding a preliminary toolbar to the GTKMM GUI.
		Upgrading configure script check for gtkmm-2.4 from version
		2.12.1 to 2.12.5. (Maybe not stricly necessary, but that's what
		I am currently using for development.)
20080323	Experimenting with graying out the Undo and Redo actions in
		the GUI (by querying the ActionStack).
20080324	Making the code compile cleanly with GNU C++' -pedantic. The
		only module where -pedantic is not used is src/ir/, which needs
		to cast e.g. uint8_t* to function pointer (for runtime
		generated code).