@@ -3947,3 +3947,7 @@ Changelog for GXemul:
 		only module where -pedantic is not used is src/ir/, which needs
 		to cast e.g. uint8_t* to function pointer (for runtime
 		generated code).
+		Beginning on a mainbus (MainbusComponent), which will forward
+		reads and writes to other devices (such as RAM).
+20080325	Making the counter in the ReferenceCountable class mutable,
+		because const objects also need to be reference countable.
